# arcane_assembly

./: .gitignore  .luarc.json  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/definitions/: bindings.d.lua  mod_descriptor_schema.json
assets/mods/main/: main.mod.json
assets/mods/main/assets/sprites/: fireball.ase
assets/mods/main/spells/: explosion.lua  fireball.lua
assets/mods/player/: player.lua
assets/scripts/core/main/: main.lua  main.mod.json
assets/scripts/core/main/sprites/: wizard.ase
assets/scripts/core/player/: player.lua  player.mod.json
assets/scripts/core/player/assets/sprites/: wizard.ase
assets/scripts/main/: main.lua  main.mod.json
assets/scripts/main/assets/fonts/edit_undo/: license.txt
assets/scripts/main/spells/: fireball.lua  plain_ass_projectile.lua
assets/scripts/player/: player.lua  player.mod.json
docs/: index.md  mod_sctructure.md
src/: main.rs  system_sets.rs
src/audio/: handle.rs  mod.rs
src/camera/: mod.rs
src/character/: controllable_character.rs  health.rs  mod.rs
src/console/: list_mods.rs  mod.rs  spawn_spell_component.rs
src/input/: mod.rs  mouse.rs
src/map/: mod.rs
src/mods/: assets.rs  mod.rs  mod_descriptor_asset.rs  mod_descriptor_asset_loader.rs  mod_descriptor_loaded_assets.rs  systems.rs
src/mods/bindings/: audio.rs  mod.rs
src/particles/: bindings.rs  mod.rs  particle_effect_builder.rs
src/physics/: bindings.rs  mod.rs
src/scripts/: assets.rs  loaded_script_descriptors.rs  mod.rs  script_descriptor.rs  script_descriptor_asset_loader.rs  systems.rs
src/scripts/bindings/: audio.rs  mod.rs
src/settings/: mod.rs
src/spells/: bindings.rs  callbacks.rs  dotgraph.rs  executor.rs  lifecycle.rs  mana.rs  mod.rs  spell.rs  spell_component_asset.rs
src/sprite/: aseprite.rs  mod.rs
src/state/: mod.rs
src/ui/: interface.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs  utils.rs
xtask/src/commands/: exec.rs  mod.rs  package.rs
