[package]
name = "arcane_assembly"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["debug"] }
bevy_mod_scripting = { version = "0.19", features = [
    "luajit",
    "lua_language_server_files",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bevy_console = { version = "0.17" }
bevy_rapier2d = { git = "https://github.com/Buncys/bevy_rapier", branch = "bevy-0.18.0", features = [
    "debug-render-2d",
    "enhanced-determinism",
    "serde-serialize",
    "parallel",
] }
