[package]
name = "arcane_assembly"
version = "0.1.0"
edition = "2024"
default-run = "arcane_assembly"

[features]
default = ["dev_tools"]
dev_tools = ["bevy_dev_tools"]

[workspace]
members = ["xtask/"]

[dependencies]
bevy = { version = "0.18", features = ["debug", "wav"] }
bevy_mod_scripting = { git = "https://github.com/makspll/bevy_mod_scripting", rev = "1603c3a", features = [
    "luajit",
    "lua_language_server_files",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bevy_console = { version = "0.17" }
bevy_rapier2d = { version = "0.33.0", features = [
    "debug-render-2d",
    "enhanced-determinism",
    "serde-serialize",
    "parallel",
] }
bevy_aseprite_ultra = { version = "0.8", features = ["asset_processing"] }
bevy-inspector-egui = { version = "0.36" }
schemars = { version = "1.2" }
bevy_dev_tools = {version = "0.18", optional = true}

