[package]
name = "arcane_assembly"
version = "0.1.0"
edition = "2024"
default-run = "arcane_assembly"

[features]
default = ["dev_tools"]
dev_tools = ["bevy_dev_tools"]

[workspace]
members = ["xtask/"]

[dependencies]
bevy = { version = "0.18", features = ["debug", "wav"] }

# serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
schemars = { version = "1.2" }

# physics
bevy_rapier2d = { version = "0.33.0", features = [
    "debug-render-2d",
    "enhanced-determinism",
    "serde-serialize",
    "parallel",
] }

# particles
bevy_hanabi = { version = "0.18", default-features = false, features = ["2d", "serde"]}

# sprites
bevy_aseprite_ultra = { version = "0.8", features = ["asset_processing"] }

# scripting
bevy_mod_scripting = { git = "https://github.com/makspll/bevy_mod_scripting", rev = "a0a5991", features = [
    "luajit",
    "lua_language_server_files",
] }

# UI
bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", rev = "31a128d" }
bevy-inspector-egui = { version = "0.36" }

# dev tools
bevy_console = { version = "0.17" }
bevy_dev_tools = {version = "0.18", optional = true}

petgraph = {version = "0.8", features=["dot_parser"]}
